# Chic

./: .clippy.toml  .gitignore  AGENT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  SPEC.md  SUPPORT.md  build.rs  manifest.workspace.yaml  todos.md  trace.json
.config/: nextest.toml
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
benches/: codegen.rs  const_eval.rs  container_intrinsics.rs  decimal_fast.rs  expr_pretty.rs  ndarray.rs  region_alloc.rs  runtime_async_scope.rs  runtime_span_stackalloc.rs  runtime_span_utf8.rs  runtime_string_push.rs  runtime_vec_push.rs  tensor_codegen.rs  text_stream.rs  traits.rs
chic-vscode/: .vscodeignore  LICENSE  extension.js  package-lock.json  package.json
ci/: stablehlo-version-check.yml
coverage/: baseline.json
docs/: CLA.md  README.md  architecture.md  cc1_stage.md  ci.md  coverage.md  embedded.md  getting-started.md  git_hooks.md  header_generation.md  language_access.md  logging_snapshots.md  manifest_manifest.md  mir_design.md  mission.md  profiling.md  releases.md  std_char.md  style-guide.md  tooling.md  troubleshooting.md  wasm_backend.md  website.md
intellij-plugin/: README.md  build.gradle.kts  settings.gradle.kts
scripts/: check_coverage.sh  check_no_deinit.sh  check_todos.sh  codex_review.py  coverage.sh  flamegraph_wasm.sh  gen_dependency_diagram.py  gen_unicode.rs
signatures/: cla.json
src/: accessibility.rs  async_flags.rs  cc1.rs  chic_coverage.rs  chic_kind.rs  clone_glue.rs  const_eval_config.rs  decimal.rs  defines.rs  di.rs  drop_glue.rs  eq_glue.rs  error.rs  hash_glue.rs  language.rs  lib.rs  logging.rs  main.rs  manifest.rs  mmio.rs  monomorphize.rs  primitives.rs  run_log.rs  runtime_package.rs  spec.rs  target.rs  threading.rs  type_identity.rs  type_metadata.rs  version.rs
tests/: accessibility.rs  backend_validation.rs  base_resolution.rs  build_cache.rs  cc1_stage.rs  (+111 more)
(+1655 files in other folders)
