[package]
name = "chic"
version = "0.1.0"
edition = "2024"
description = "Temporary Rust-based compiler front-end and tooling for the Chic language."
license = "Proprietary"

[workspace]
members = ["xtask"]

[package.metadata]
project = "Chic temporary compiler bootstrap"

[features]
default = ["runtime-simd", "cli-cc1", "cli-extern-bind"]
runtime-simd = []
cli-cc1 = []
cli-extern-bind = []
simd-test-hooks = []

[[bin]]
name = "chic"
path = "src/main.rs"

[[bin]]
name = "impact-lsp"
path = "src/bin/impact_lsp.rs"

[dependencies]
target-lexicon = "0.13"
object = { version = "0.36", features = ["write"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
blake3 = "1"
tempfile = "3"
lsp-server = "0.7"
lsp-types = "0.95"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
rust_decimal = { version = "1.33", default-features = false, features = ["std"] }
glob = "0.3"
libc = "0.2"
inferno = "0.11"
regex = "1"
half = "2"
roxmltree = "0.18"
similar = "2"
once_cell = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
criterion = "0.5"
expect-test = "1"
proptest = "1"
filetime = "0.2"

[[bench]]
name = "codegen"
harness = false

[[bench]]
name = "const_eval"
harness = false

[[bench]]
name = "decimal_fast"
harness = false
required-features = ["simd-test-hooks"]

[[bench]]
name = "expr_pretty"
harness = false

[[bench]]
name = "region_alloc"
harness = false

[[bench]]
name = "runtime_vec_push"
harness = false

[[bench]]
name = "runtime_string_push"
harness = false

[[bench]]
name = "text_stream"
harness = false

[[bench]]
name = "traits"
harness = false

[[bench]]
name = "runtime_span_stackalloc"
harness = false

[[bench]]
name = "container_intrinsics"
harness = false

[[bench]]
name = "ndarray"
harness = false

[[bench]]
name = "tensor_codegen"
harness = false
